# contest-notifier-rust

./: Cargo.toml  clist.rs  main.rs
src/: clist.rs  green_api.rs  main.rs
