[package]
name = "contest-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0", default-features = false }
serde = { version = "1.0.219" ,  features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.10.3"